# Hive Viriatum Web Server
# Copyright (C) 2008 Hive Solutions Lda.
#
# This file is part of Hive Viriatum Web Server.
#
# Hive Viriatum Web Server is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Hive Viriatum Web Server is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Hive Viriatum Web Server. If not, see <http:#www.gnu.org/licenses/>.

# __author__    = João Magalhães <joamag@hive.pt>
# __version__   = 1.0.0
# __revision__  = $LastChangedRevision: 2390 $
# __date__      = $LastChangedDate: 2009-04-02 08:36:50 +0100 (qui, 02 Abr 2009) $
# __copyright__ = Copyright (c) 2008 Hive Solutions Lda.
# __license__   = GNU General Public License (GPL), Version 3

include $(top_srcdir)/Common.am

nobase_dist_resources_DATA = html/welcome/error.html \
html/welcome/index.html \
html/welcome/listing.html \
html/welcome/status.html \
html/welcome/resources/css/layout.css \
html/welcome/resources/images/arrow-left.png \
html/welcome/resources/images/favicon.ico \
html/welcome/resources/images/separator-horizontal.png \
html/welcome/resources/images/error/error-code-404.png \
html/welcome/resources/images/illustration/error-illustration.png \
html/welcome/resources/images/illustration/main-illustration.png \
html/welcome/resources/images/logo/viriatum-logo.png \
html/welcome/resources/images/logo/viriatum-background-logo.png \
html/welcome/resources/images/mime/icon-folder.png \
html/welcome/resources/images/mime/icon-html.png \
html/welcome/resources/images/mime/icon-image.png \
html/welcome/resources/images/mime/icon-text.png
