# Hive Viriatum Web Server
# Copyright (c) 2008-2026 Hive Solutions Lda.
#
# This file is part of Hive Viriatum Web Server.
#
# Hive Viriatum Web Server is free software: you can redistribute it and/or modify
# it under the terms of the Apache License as published by the Apache
# Foundation, either version 2.0 of the License, or (at your option) any
# later version.
#
# Hive Viriatum Web Server is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# Apache License for more details.
#
# You should have received a copy of the Apache License along with
# Hive Viriatum Web Server. If not, see <http://www.apache.org/licenses/>.

# __author__    = João Magalhães <joamag@hive.pt>
# __copyright__ = Copyright (c) 2008-2026 Hive Solutions Lda.
# __license__   = Apache License, Version 2.0

include $(top_srcdir)/Common.am

nobase_dist_wwwroot_DATA = index.html \
engine/about \
engine/connection \
engine/connections \
engine/status \
resources/css/layout.css \
resources/images/arrow-left.png \
resources/images/background.png \
resources/images/favicon.ico \
resources/images/separator-horizontal.png \
resources/images/illustration/error-illustration.png \
resources/images/illustration/main-illustration.png \
resources/images/logo/steamfire-logo.png \
resources/images/logo/viriatum-logo.png \
resources/images/logo/viriatum-background-logo.png \
resources/images/mime/icon-folder.png \
resources/images/mime/icon-html.png \
resources/images/mime/icon-image.png \
resources/images/mime/icon-json.png \
resources/images/mime/icon-link.png \
resources/images/mime/icon-pdf.png \
resources/images/mime/icon-source.png \
resources/images/mime/icon-text.png \
resources/images/mime/icon-xml.png \
templates/error.html.tpl \
templates/listing.html.tpl
